--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "scripts": {
+    "start": "ts-node app.js"
+  },
   "devDependencies": {
+    "fs": "^0.0.1-security",
+    "prompts": "^2.4.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
